crates/autoresolve/tests/compile_fail/resolvable_self_receiver.rs
use autoresolve_macros::resolvable;

#[derive(Clone)]
struct Foo;

#[resolvable]
impl Foo {
    fn new(&self) -> Self {
        self.clone()
    }
}

fn main() {}
